<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/activity_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_text"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:textSize="18dp"
        android:textStyle="bold|italic"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="95dp"
        android:layout_marginBottom="77dp"
        android:onClick="next"
        android:text="@string/click_to_view" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="63dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="209dp"
        android:onClick="savePublic"
        android:text="@string/save_as_public" />

    <Button
        android:id="@+id/button"
        android:layout_width="124dp"
        android:layout_height="67dp"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="232dp"
        android:layout_marginBottom="-11dp"
        android:onClick="savePrivate"
        android:text="@string/save_as_private" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center_vertical|center"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />


</RelativeLayout>