<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main2Activity"
    >

    <TextView
        android:id="@+id/getText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text=""
        android:textSize="18dp"
        android:textStyle="bold|italic"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="160dp"
        android:layout_height="83dp"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="-40dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:onClick="getPublic"
        android:text="@string/show_public_data" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getText"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="106dp"
        android:layout_marginRight="217dp"
        android:onClick="getPrivate"
        android:text="@string/show_private_data"
        tools:ignore="UnKnownID" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_marginTop="102dp"
        android:onClick="back"
        android:text="@string/back" />
</RelativeLayout>